# tud-1-cons

./: .gitignore  Dockerfile.client  Dockerfile.mypeer  Dockerfile.peer  Readme.md  build_docker_containers.sh  docker-compose.yml  generate_docker_compose.sh
client/: Cargo.toml  Cross.toml  build.rs
client/src/: main.rs
logs/: log.csv
mypeer/: client_service.py  peer_service.py  run.sh  types_pb2.py  types_pb2.pyi  zab_client_pb2.py  zab_client_pb2_grpc.py  zab_peer_pb2.py  zab_peer_pb2.pyi  zab_peer_pb2_grpc.py
mypeer/proto/: zab_peer.proto
proto/: types.proto
task/peer/: main.py  peer_service.py  run3.sh  run4.sh  types_pb2_grpc.py  zab_client_pb2.pyi
task/peer/proto/: zab_client.proto
