[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
prost = "0.13.3"
tonic = "0.12.3"
clap = { version = "4.5.21", features = ["derive"] }
futures = "0.3.31"
csv = "1.3.1"
chrono = "0.4.38"
serde = { version = "1.0.215", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12.3"

[build]
target = "aarch64-unknown-linux-gnu"

[target.aarch64-unknown-linux-gnu]
linker = "/opt/homebrew/bin/aarch64-linux-gnu-gcc"